added files updated html, css

--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -4,7 +4,7 @@
   font-family: 'Canela Text Trial Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Regular'), url('../assets/fonts/Canela_Deck/CanelaText-Regular-Trial.woff') format('woff');
+  src: local('Canela Text Trial Regular'), url('fonts/Canela/CanelaText-Regular-Trial.woff') format('woff');
 }
 
 
@@ -12,7 +12,7 @@
   font-family: 'Canela Text Trial Regular No 2';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Regular No 2'), url('../assets/fonts/Canela_Deck/CanelaText-RegularNo2-Trial.woff') format('woff');
+  src: local('Canela Text Trial Regular No 2'), url('CanelaText-RegularNo2-Trial.woff') format('woff');
 }
 
 
@@ -20,7 +20,7 @@
   font-family: 'Canela Text Trial Regular Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Regular Italic'), url('../assets/fonts/Canela_Deck/CanelaText-RegularItalic-Trial.woff') format('woff');
+  src: local('Canela Text Trial Regular Italic'), url('CanelaText-RegularItalic-Trial.woff') format('woff');
 }
 
 
@@ -28,7 +28,7 @@
   font-family: 'Canela Text Trial Regular No 2 Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Regular No 2 Italic'), url('../assets/fonts/Canela_Deck/CanelaText-RegularNo2Italic-Trial.woff') format('woff');
+  src: local('Canela Text Trial Regular No 2 Italic'), url('CanelaText-RegularNo2Italic-Trial.woff') format('woff');
 }
 
 
@@ -36,7 +36,7 @@
   font-family: 'Canela Text Trial Thin';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Thin'), url('../assets/fonts/Canela_Deck/CanelaText-Thin-Trial.woff') format('woff');
+  src: local('Canela Text Trial Thin'), url('CanelaText-Thin-Trial.woff') format('woff');
 }
 
 
@@ -44,7 +44,7 @@
   font-family: 'Canela Text Trial Thin Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Thin Italic'), url('../assets/fonts/Canela_Deck/CanelaText-ThinItalic-Trial.woff') format('woff');
+  src: local('Canela Text Trial Thin Italic'), url('CanelaText-ThinItalic-Trial.woff') format('woff');
 }
 
 
@@ -52,7 +52,7 @@
   font-family: 'Canela Text Trial Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Light'), url('../assets/fonts/Canela_Deck/CanelaText-Light-Trial.woff') format('woff');
+  src: local('Canela Text Trial Light'), url('CanelaText-Light-Trial.woff') format('woff');
 }
 
 
@@ -60,7 +60,7 @@
   font-family: 'Canela Text Trial Light Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Light Italic'), url('../assets/fonts/Canela_Deck/CanelaText-LightItalic-Trial.woff') format('woff');
+  src: local('Canela Text Trial Light Italic'), url('CanelaText-LightItalic-Trial.woff') format('woff');
 }
 
 
@@ -68,7 +68,7 @@
   font-family: 'Canela Text Trial Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Medium'), url('../assets/fonts/Canela_Deck/CanelaText-Medium-Trial.woff') format('woff');
+  src: local('Canela Text Trial Medium'), url('fonts/Canela/CanelaText-Medium-Trial.woff') format('woff');
 }
 
 
@@ -76,7 +76,7 @@
   font-family: 'Canela Text Trial Medium Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Medium Italic'), url('../assets/fonts/Canela_Deck/CanelaText-MediumItalic-Trial.woff') format('woff');
+  src: local('Canela Text Trial Medium Italic'), url('CanelaText-MediumItalic-Trial.woff') format('woff');
 }
 
 
@@ -84,7 +84,7 @@
   font-family: 'Canela Text Trial Bold';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Bold'), url('../assets/fonts/Canela_Deck/CanelaText-Bold-Trial.woff') format('woff');
+  src: local('Canela Text Trial Bold'), url('fonts/Canela/CanelaText-Bold-Trial.woff') format('woff');
 }
 
 
@@ -92,7 +92,7 @@
   font-family: 'Canela Text Trial Bold Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Bold Italic'), url('../assets/fonts/Canela_Deck/CanelaText-BoldItalic-Trial.woff') format('woff');
+  src: local('Canela Text Trial Bold Italic'), url('CanelaText-BoldItalic-Trial.woff') format('woff');
 }
 
 
@@ -100,7 +100,7 @@
   font-family: 'Canela Text Trial Black';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Black'), url('../assets/fonts/Canela_Deck/CanelaText-Black-Trial.woff') format('woff');
+  src: local('Canela Text Trial Black'), url('CanelaText-Black-Trial.woff') format('woff');
 }
 
 
@@ -108,7 +108,7 @@
   font-family: 'Canela Text Trial Black Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Text Trial Black Italic'), url('../assets/fonts/Canela_Deck/CanelaText-BlackItalic-Trial.woff') format('woff');
+  src: local('Canela Text Trial Black Italic'), url('CanelaText-BlackItalic-Trial.woff') format('woff');
 }
 
 
@@ -116,7 +116,7 @@
   font-family: 'Canela Trial Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Regular'), url('../assets/fonts/Canela_Deck/Canela-Regular-Trial.woff') format('woff');
+  src: local('Canela Trial Regular'), url('Canela-Regular-Trial.woff') format('woff');
 }
 
 
@@ -124,7 +124,7 @@
   font-family: 'Canela Condensed Trial Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Regular'), url('../assets/fonts/Canela_Deck/CanelaCondensed-Regular-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Regular'), url('CanelaCondensed-Regular-Trial.woff') format('woff');
 }
 
 
@@ -132,7 +132,7 @@
   font-family: 'Canela Deck Trial Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Regular'), url('../assets/fonts/Canela_Deck/CanelaDeck-Regular-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Regular'), url('CanelaDeck-Regular-Trial.woff') format('woff');
 }
 
 
@@ -140,7 +140,7 @@
   font-family: 'Canela Trial Regular Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Regular Italic'), url('../assets/fonts/Canela_Deck/Canela-RegularItalic-Trial.woff') format('woff');
+  src: local('Canela Trial Regular Italic'), url('Canela-RegularItalic-Trial.woff') format('woff');
 }
 
 
@@ -148,7 +148,7 @@
   font-family: 'Canela Condensed Trial Regular Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Regular Italic'), url('../assets/fonts/Canela_Deck/CanelaCondensed-RegularItalic-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Regular Italic'), url('CanelaCondensed-RegularItalic-Trial.woff') format('woff');
 }
 
 
@@ -156,7 +156,7 @@
   font-family: 'Canela Deck Trial Regular Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Regular Italic'), url('../assets/fonts/Canela_Deck/CanelaDeck-RegularItalic-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Regular Italic'), url('CanelaDeck-RegularItalic-Trial.woff') format('woff');
 }
 
 
@@ -164,7 +164,7 @@
   font-family: 'Canela Trial Thin';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Thin'), url('../assets/fonts/Canela_Deck/Canela-Thin-Trial.woff') format('woff');
+  src: local('Canela Trial Thin'), url('Canela-Thin-Trial.woff') format('woff');
 }
 
 
@@ -172,7 +172,7 @@
   font-family: 'Canela Condensed Trial Thin';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Thin'), url('../assets/fonts/Canela_Deck/CanelaCondensed-Thin-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Thin'), url('CanelaCondensed-Thin-Trial.woff') format('woff');
 }
 
 
@@ -180,7 +180,7 @@
   font-family: 'Canela Deck Trial Thin';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Thin'), url('../assets/fonts/Canela_Deck/CanelaDeck-Thin-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Thin'), url('CanelaDeck-Thin-Trial.woff') format('woff');
 }
 
 
@@ -188,7 +188,7 @@
   font-family: 'Canela Trial Thin Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Thin Italic'), url('../assets/fonts/Canela_Deck/Canela-ThinItalic-Trial.woff') format('woff');
+  src: local('Canela Trial Thin Italic'), url('Canela-ThinItalic-Trial.woff') format('woff');
 }
 
 
@@ -196,7 +196,7 @@
   font-family: 'Canela Condensed Trial Thin Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Thin Italic'), url('../assets/fonts/Canela_Deck/CanelaCondensed-ThinItalic-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Thin Italic'), url('CanelaCondensed-ThinItalic-Trial.woff') format('woff');
 }
 
 
@@ -204,7 +204,7 @@
   font-family: 'Canela Deck Trial Thin Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Thin Italic'), url('../assets/fonts/Canela_Deck/CanelaDeck-ThinItalic-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Thin Italic'), url('CanelaDeck-ThinItalic-Trial.woff') format('woff');
 }
 
 
@@ -212,7 +212,7 @@
   font-family: 'Canela Trial Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Light'), url('../assets/fonts/Canela_Deck/Canela-Light-Trial.woff') format('woff');
+  src: local('Canela Trial Light'), url('Canela-Light-Trial.woff') format('woff');
 }
 
 
@@ -220,7 +220,7 @@
   font-family: 'Canela Condensed Trial Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Light'), url('../assets/fonts/Canela_Deck/CanelaCondensed-Light-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Light'), url('CanelaCondensed-Light-Trial.woff') format('woff');
 }
 
 
@@ -228,7 +228,7 @@
   font-family: 'Canela Deck Trial Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Light'), url('../assets/fonts/Canela_Deck/CanelaDeck-Light-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Light'), url('CanelaDeck-Light-Trial.woff') format('woff');
 }
 
 
@@ -236,7 +236,7 @@
   font-family: 'Canela Trial Light Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Light Italic'), url('../assets/fonts/Canela_Deck/Canela-LightItalic-Trial.woff') format('woff');
+  src: local('Canela Trial Light Italic'), url('Canela-LightItalic-Trial.woff') format('woff');
 }
 
 
@@ -244,7 +244,7 @@
   font-family: 'Canela Condensed Trial Light Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Light Italic'), url('../assets/fonts/Canela_Deck/CanelaCondensed-LightItalic-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Light Italic'), url('CanelaCondensed-LightItalic-Trial.woff') format('woff');
 }
 
 
@@ -252,7 +252,7 @@
   font-family: 'Canela Deck Trial Light Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Light Italic'), url('../assets/fonts/Canela_Deck/CanelaDeck-LightItalic-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Light Italic'), url('CanelaDeck-LightItalic-Trial.woff') format('woff');
 }
 
 
@@ -260,7 +260,7 @@
   font-family: 'Canela Trial Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Medium'), url('../assets/fonts/Canela_Deck/Canela-Medium-Trial.woff') format('woff');
+  src: local('Canela Trial Medium'), url('Canela-Medium-Trial.woff') format('woff');
 }
 
 
@@ -268,7 +268,7 @@
   font-family: 'Canela Condensed Trial Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Medium'), url('../assets/fonts/Canela_Deck/CanelaCondensed-Medium-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Medium'), url('CanelaCondensed-Medium-Trial.woff') format('woff');
 }
 
 
@@ -276,7 +276,7 @@
   font-family: 'Canela Deck Trial Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Medium'), url('../assets/fonts/Canela_Deck/CanelaDeck-Medium-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Medium'), url('fonts/Canela/CanelaDeck-Medium-Trial.woff') format('woff');
 }
 
 
@@ -284,7 +284,7 @@
   font-family: 'Canela Trial Medium Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Medium Italic'), url('../assets/fonts/Canela_Deck/Canela-MediumItalic-Trial.woff') format('woff');
+  src: local('Canela Trial Medium Italic'), url('Canela-MediumItalic-Trial.woff') format('woff');
 }
 
 
@@ -292,7 +292,7 @@
   font-family: 'Canela Condensed Trial Medium Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Medium Italic'), url('../assets/fonts/Canela_Deck/CanelaCondensed-MediumItalic-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Medium Italic'), url('CanelaCondensed-MediumItalic-Trial.woff') format('woff');
 }
 
 
@@ -300,7 +300,7 @@
   font-family: 'Canela Deck Trial Medium Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Medium Italic'), url('../assets/fonts/Canela_Deck/CanelaDeck-MediumItalic-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Medium Italic'), url('CanelaDeck-MediumItalic-Trial.woff') format('woff');
 }
 
 
@@ -308,7 +308,7 @@
   font-family: 'Canela Trial Bold';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Bold'), url('../assets/fonts/Canela_Deck/Canela-Bold-Trial.woff') format('woff');
+  src: local('Canela Trial Bold'), url('Canela-Bold-Trial.woff') format('woff');
 }
 
 
@@ -316,7 +316,7 @@
   font-family: 'Canela Condensed Trial Bold';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Bold'), url('../assets/fonts/Canela_Deck/CanelaCondensed-Bold-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Bold'), url('CanelaCondensed-Bold-Trial.woff') format('woff');
 }
 
 
@@ -324,7 +324,7 @@
   font-family: 'Canela Deck Trial Bold';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Bold'), url('../assets/fonts/Canela_Deck/CanelaDeck-Bold-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Bold'), url('fonts/Canela/CanelaDeck-Bold-Trial.woff') format('woff');
 }
 
 
@@ -332,7 +332,7 @@
   font-family: 'Canela Trial Bold Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Bold Italic'), url('../assets/fonts/Canela_Deck/Canela-BoldItalic-Trial.woff') format('woff');
+  src: local('Canela Trial Bold Italic'), url('Canela-BoldItalic-Trial.woff') format('woff');
 }
 
 
@@ -340,7 +340,7 @@
   font-family: 'Canela Condensed Trial Bold Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Bold Italic'), url('../assets/fonts/Canela_Deck/CanelaCondensed-BoldItalic-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Bold Italic'), url('CanelaCondensed-BoldItalic-Trial.woff') format('woff');
 }
 
 
@@ -348,7 +348,7 @@
   font-family: 'Canela Deck Trial Bold Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Bold Italic'), url('../assets/fonts/Canela_Deck/CanelaDeck-BoldItalic-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Bold Italic'), url('CanelaDeck-BoldItalic-Trial.woff') format('woff');
 }
 
 
@@ -356,7 +356,7 @@
   font-family: 'Canela Trial Black';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Black'), url('../assets/fonts/Canela_Deck/Canela-Black-Trial.woff') format('woff');
+  src: local('Canela Trial Black'), url('Canela-Black-Trial.woff') format('woff');
 }
 
 
@@ -364,7 +364,7 @@
   font-family: 'Canela Condensed Trial Black';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Black'), url('../assets/fonts/Canela_Deck/CanelaCondensed-Black-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Black'), url('CanelaCondensed-Black-Trial.woff') format('woff');
 }
 
 
@@ -372,7 +372,7 @@
   font-family: 'Canela Deck Trial Black';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Black'), url('../assets/fonts/Canela_Deck/CanelaDeck-Black-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Black'), url('CanelaDeck-Black-Trial.woff') format('woff');
 }
 
 
@@ -380,7 +380,7 @@
   font-family: 'Canela Trial Black Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Trial Black Italic'), url('../assets/fonts/Canela_Deck/Canela-BlackItalic-Trial.woff') format('woff');
+  src: local('Canela Trial Black Italic'), url('Canela-BlackItalic-Trial.woff') format('woff');
 }
 
 
@@ -388,7 +388,7 @@
   font-family: 'Canela Condensed Trial Black Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Condensed Trial Black Italic'), url('../assets/fonts/Canela_Deck/CanelaCondensed-BlackItalic-Trial.woff') format('woff');
+  src: local('Canela Condensed Trial Black Italic'), url('CanelaCondensed-BlackItalic-Trial.woff') format('woff');
 }
 
 
@@ -396,5 +396,5 @@
   font-family: 'Canela Deck Trial Black Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Canela Deck Trial Black Italic'), url('../assets/fonts/Canela_Deck/CanelaDeck-BlackItalic-Trial.woff') format('woff');
+  src: local('Canela Deck Trial Black Italic'), url('CanelaDeck-BlackItalic-Trial.woff') format('woff');
 }
